<resources>
    <string name="app_name">Dorci Nails</string>
    <string name="register">Regisztráció</string>
    <string name="login_with_google">>Bejelentkezés Google-el</string>
    <string name="login">Bejelentkezés</string>
    <string name="password">Jelszó</string>
    <string name="user_name">Felhasználó név</string>
    <string name="name">Név</string>
    <string name="e_mail_address">E-mail cím</string>
    <string name="phone_number">Telefonszám</string>
    <string name="password_again">Jelszó újra</string>
    <string name="cancel">Mégsem</string>
    <string name="logout">logout</string>
    <string name="item">item</string>
    <string-array name="services">
        <item>Manikűr</item>
        <item>Alap francia</item>
        <item>Erősített géllakk</item>
        <item>Épített köröm</item>
        <item>Feltöltés</item>
    </string-array>


    <string-array name="free_times">
        <item>9:00-11:00</item>
        <item>11:00-13:00</item>
        <item>13:00-15:00</item>
        <item>15:00-17:00</item>
        <item>17:00-19:00</item>
        <item>19:00-21:00</item>
    </string-array>

    <string-array name="Days">
        <item>05.01.</item>
        <item>05.02.</item>
        <item>05.03.</item>
        <item>05.04.</item>
        <item>05.05.</item>
        <item>05.06.</item>
        <item>05.07.</item>
        <item>05.08.</item>
        <item>05.09.</item>
        <item>05.10.</item>
        <item>05.11.</item>
        <item>05.12.</item>
        <item>05.13.</item>
        <item>05.14.</item>
        <item>05.15.</item>
        <item>05.16.</item>
        <item>05.17.</item>
        <item>05.18.</item>
        <item>05.19.</item>
        <item>05.20.</item>
        <item>05.21.</item>
        <item>05.22.</item>
        <item>05.23.</item>
        <item>05.24.</item>
        <item>05.25.</item>
        <item>05.26.</item>
        <item>05.27.</item>
        <item>05.28.</item>
        <item>05.29.</item>
        <item>05.30.</item>
        <item>05.31.</item>
    </string-array>

    <string-array name="price">
        <item>3000 Ft</item>
        <item>5000 Ft</item>
        <item>8000 Ft</item>

    </string-array>
</resources>