<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gelbg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Regisztráció"
        android:textAlignment="center"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editTextNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editUserNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp" />
    <EditText
        android:id="@+id/editTextPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Registration"
        android:layout_marginTop="40dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cancel"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />


</LinearLayout>